.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/ATDSA_bookshelf__DSA_Playlist__c.object
<CustomObject>
    <description>Represents an ordered list of content (PDF documents, PowerPoint presentations, streamed video, etc.)</description>
    <fields>
        <fullName>ATDSA_bookshelf__Description__c</fullName>
        <label>Description</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__External_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__IsFeatured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Language_Code__c</fullName>
        <description>ISO language code</description>
        <formula>CASE(ATDSA_bookshelf__Language__c,
&quot;Chinese (Simplified)&quot;, &quot;zh_CN&quot;,
&quot;Chinese (Traditional)&quot;, &quot;zh_TW&quot;,
&quot;Danish&quot;, &quot;da&quot;,
&quot;Dutch&quot;, &quot;nl_NL&quot;,
&quot;English&quot;, &quot;en_US&quot;,
&quot;Finnish&quot;, &quot;fi&quot;,
&quot;French&quot;, &quot;fr&quot;,
&quot;German&quot;, &quot;de&quot;,
&quot;Italian&quot;, &quot;it&quot;,
&quot;Japanese&quot;, &quot;ja&quot;,
&quot;Korean&quot;, &quot;ko&quot;,
&quot;Portuguese (Brazil)&quot;, &quot;pt_BR&quot;,
&quot;Russian&quot;, &quot;ru&quot;,
&quot;Spanish&quot;, &quot;es&quot;,
&quot;Spanish (Mexico)&quot;, &quot;es_MX&quot;,
&quot;Swedish&quot;, &quot;sv&quot;,
&quot;Thai&quot;, &quot;th&quot;,
&quot;&quot;)</formula>
        <inlineHelpText>ISO language code</inlineHelpText>
        <label>Language Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Traditional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugese (Brazil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Large_Image_URL__c</fullName>
        <label>Large Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Query__c</fullName>
        <label>Query</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Shared_Internally__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, then this Playlist will be shared with all internal users via application of a sharing rule</description>
        <inlineHelpText>If checked, then this Playlist will be shared with all internal users</inlineHelpText>
        <label>Shared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATDSA_bookshelf__Small_Image_URL__c</fullName>
        <label>Small Image URL</label>
        <type>Url</type>
    </fields>
    <label>Playlist</label>
    <listViews>
        <fullName>ATDSA_bookshelf__All</fullName>
        <columns>NAME</columns>
        <columns>ATDSA_bookshelf__Shared_Internally__c</columns>
        <columns>ATDSA_bookshelf__External_Approved__c</columns>
        <columns>ATDSA_bookshelf__Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ATDSA_bookshelf__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Playlist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playlists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>